completing the templates, creating a new controller that control articles, creating new routes. Now, you can navigate with a link in the nav bar

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -2,3 +2,7 @@
 #    path: /
 #    controller: App\Controller\DefaultController::index
 # config/routes.yaml
+#article :
+#     path: /article/{titre}
+#     controller: App\Controller\ArticleController::article
+     #config/routes.yaml
