--- a/.env
+++ b/.env
@@ -28,5 +28,6 @@ APP_SECRET=cc992716b0a1d32f18f4ee0e5eee6e21
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
-DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
+# DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
+DATABASE_URL="mysql://project:project@127.0.0.1:3306/project?serverVersion=mariadb-10.4.17"
 ###< doctrine/doctrine-bundle ###
