--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,6 +51,32 @@
             "database": "project",
             "username": "project",
             "password": "project"
+        },
+        {
+            "mysqlOptions": {
+                "authProtocol": "default"
+            },
+            "previewLimit": 50,
+            "server": "localhost",
+            "port": 3306,
+            "driver": "MariaDB",
+            "name": "project",
+            "database": "project",
+            "username": "project",
+            "password": "project"
+        },
+        {
+            "mysqlOptions": {
+                "authProtocol": "default"
+            },
+            "previewLimit": 50,
+            "server": "localhost",
+            "port": 3306,
+            "driver": "MariaDB",
+            "name": "project",
+            "database": "project",
+            "username": "project",
+            "password": "project"
         }
     ]
 }
